--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,16 @@
     <link rel=’stylesheet’
     href=’https://fonts.googleapis.com/CSS?family=Google+Sans:100,300,400,500,700,900,100i,300i,400i,500i,700i,900i’
     media=’all’ />
+    <link
+      href="http://fonts.googleapis.com/css?family=Georgia"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="http://fonts.googleapis.com/css?family=Lucida Grande"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
