--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel=’stylesheet’
-    href=’https://fonts.googleapis.com/CSS?family=Google+Sans:100,300,400,500,700,900,100i,300i,400i,500i,700i,900i’
-    media=’all’ />
+    <link rel="stylesheet"
+    href="https://fonts.googleapis.com/CSS?family=Google+Sans:100,300,400,500,700,900,100i,300i,400i,500i,700i,900i"
+   />
     <link
       href="http://fonts.googleapis.com/css?family=Georgia"
       rel="stylesheet"
